# uav_simulation

./: CMakeLists.txt  README.md  package.xml
config/: cfg.yaml
include/: params.h  simple_traj.h
include/uav_controller/: uav_controller.h
include/uav_simulation/uav_sim/: uav_sim.h  uav_sim_node.h
launch/: rviz.launch.py  sim_uav.launch.py  simulation.rviz
models/: uav_model.urdf
src/uav_controller/: uav_controller.cpp  uav_controller_node.cpp
src/uav_sim/: uav_sim.cpp  uav_sim_node.cpp
